# blacklight-node

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  STRUCTURE.md  config.toml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  docker.yml  test.yml
blacklight-node/: Cargo.toml
blacklight-node/src/: args.rs  main.rs  shutdown.rs  verification.rs  version.rs  wallet.rs
blacklight-node/src/supervisor/: events.rs  htx.rs  mod.rs  status.rs
config/: config.toml
contracts/: README.md  foundry.toml
contracts/broadcast/DeployRouter.s.sol/78651/: run-1764840168360.json
contracts/nilav-router/: NilAVRouter.sol  README.md  TEST_GUIDE.md  foundry.toml
contracts/nilav-router/scripts/: deploy-contract.sh  deploy_local.sh  test_local.sh
contracts/script/: DeployAll.s.sol  DeployEmissionsController.s.sol  DeployRCSystem.s.sol  DeployRouter.s.sol  DeployStaking.s.sol  DeployTestRCSystem.s.sol  FundOperator.s.sol  README.md  TransferAndStake.s.sol  deploy.sh  deploy_local.sh  fund_operator.sh  transfer_and_stake.env.example  transfer_and_stake.sh
contracts/src/: EmissionsController.sol  HeartbeatManager.sol  Interfaces.sol  JailingPolicy.sol  MockERC20.sol  NoOpSlashingPolicy.sol  ProtocolConfig.sol  RewardPolicy.sol  StakingOperators.sol  TESTToken.sol  WeightedCommitteeSelector.sol  WorkloadManager.sol
contracts/src/core/: NilAVRouter.sol  StakingOperators.sol  TESTToken.sol
contracts/src/interfaces/: Interfaces.sol
contracts/src/mocks/: MockERC20.sol  MockL1StandardBridge.sol  TESTToken.sol
contracts/test/: BlacklightSystem.t.sol  EmissionsController.t.sol  HeartbeatFlow.t.sol  HeartbeatManager.t.sol  HeartbeatManagerCommitteeGrowth.t.sol  JailingPolicy.t.sol  NilAVRouter.t.sol  ProtocolConfig.t.sol  RCSystem.t.sol  README.md  RewardPolicy.t.sol  StakingOperators.t.sol  TESTToken.t.sol  WeightedCommitteeSelector.t.sol  WorkloadFlow.t.sol  WorkloadManager.t.sol  WorkloadManagerCommitteeGrowth.t.sol
contracts/test/helpers/: BlacklightFixture.sol  MerkleTestUtils.sol  RCFixture.sol
contracts/test/invariants/: HeartbeatManagerInvariants.t.sol  StakingInvariants.t.sol  WorkloadManagerInvariants.t.sol
crates/blacklight-contract-clients/: Cargo.toml
crates/blacklight-contract-clients/src/: blacklight_client.rs  heartbeat_manager.rs  htx.rs  lib.rs  nil_token.rs  protocol_config.rs  staking_operators.rs
crates/blacklight-contract-clients/src/common/: errors.rs  event_helper.rs  tx_submitter.rs
crates/chain-args/: Cargo.toml
crates/chain-args/src/: lib.rs
crates/erc-8004-contract-clients/: Cargo.toml
crates/erc-8004-contract-clients/src/: erc_8004_client.rs  identity_registry.rs  lib.rs  validation_registry.rs
crates/erc-8004-contract-clients/src/common/: errors.rs  mod.rs  tx_submitter.rs
crates/state-file/: Cargo.toml
crates/state-file/src/: lib.rs
data/: erc8004_htx.json  htxs.json  phala_htx.json  valid_htx.json
docker/: Dockerfile  Dockerfile.anvil  Dockerfile.node  Dockerfile.server  README.md  blacklight_node.dockerfile  compose.nodes.yml  compose.server.yml  docker-entrypoint.sh  keeper.dockerfile  start-anvil.sh
docker/entrypoints/: derive_private_key.sh
docs/: README.md  contract-overview.md  keeper.md
erc-8004-simulator/: Cargo.toml
erc-8004-simulator/src/: args.rs  main.rs
keeper/: Cargo.toml
keeper/src/: args.rs  clients.rs  contracts.rs  l1.rs  l2.rs  main.rs  metrics.rs
keeper/src/l2/: escalator.rs  events.rs  jailing.rs  mod.rs  rewards.rs  supervisor.rs
monitor/: Cargo.toml
monitor/src/: args.rs  main.rs
nilcc-simulator/: Cargo.toml
nilcc-simulator/src/: args.rs  main.rs
niluv_node/: docker-compose.yml
src/: config.rs  crypto.rs  json.rs  lib.rs  retry.rs  state.rs  tui.rs  types.rs  verification.rs  wallet.rs
src/config/: consts.rs  keeper.rs  mod.rs  monitor.rs  node.rs  simulator.rs
src/contract_client/: blacklight_client.rs  emissions_controller.rs  errors.rs  heartbeat_manager.rs  jailing_policy.rs  mod.rs  nil_token.rs  nilav_client.rs  nilav_router.rs  niluv_client.rs  niluv_router.rs  reward_policy.rs  staking_operators.rs  test_token.rs
src/contract_client/common/: errors.rs  event_helper.rs  mod.rs  tx_helper.rs  tx_submitter.rs
src/keeper/: client.rs  config.rs  main.rs  mod.rs
src/smart_contract/: mod.rs
src/smart_contract/scripts/: deploy_local.sh  test_local.sh
src/smart_contract/solidity/: .gitignore  NilAVRouter.sol  NilAVRouter.t.sol
src/types/: mod.rs
