[package]
name = "nilav"
version = "0.1.0"
edition = "2021"
authors = ["NilAV Contributors"]
license = "MIT OR Apache-2.0"

# Binary targets
[[bin]]
name = "nilcc_simulator"
path = "src/bin/nilcc_simulator.rs"

[[bin]]
name = "nilav_node"
path = "src/bin/nilav_node.rs"

[[bin]]
name = "contract_cli"
path = "src/bin/contract_cli.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Blockchain & Ethereum
ethers = { version = "2.0", features = ["rustls", "ws"] }
ethers-contract = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1.5"
hex = "0.4"
getrandom = "0.3"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI & TUI
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = "0.29.0"

# Utilities
anyhow = "1.0"
rand = "0.9"

[dev-dependencies]
httpmock = "0.8"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
