[package]
name = "erc-8004-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.1", features = ["contract", "providers"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

erc-8004-contract-clients = { path = "../crates/erc-8004-contract-clients" }
chain-args = { path = "../crates/chain-args" }
state-file = { path = "../crates/state-file" }
