[package]
name = "keeper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
alloy = { version = "1.1", features = ["contract", "providers"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

blacklight-contract-clients = { path = "../crates/blacklight-contract-clients" }
