[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
alloy = { version = "1.1", features = ["contract", "providers"] }
clap = { version = "4.5", features = ["derive", "env", "string"] }
crossterm = "0.29.0"
ratatui = "0.29"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

blacklight-contract-clients = { path = "../crates/blacklight-contract-clients" }
chain-args = { path = "../crates/chain-args" }
state-file = { path = "../crates/state-file" }
