[package]
name = "nilcc-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.1", features = ["contract", "providers"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1.0"
rand = "0.9"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

blacklight-contract-clients = { path = "../crates/blacklight-contract-clients" }
chain-args = { path = "../crates/chain-args" }
state-file = { path = "../crates/state-file" }
